2009-09-18  Perry McFarlane  <perry_m@fastmail.fm>
* DOC/BUGS, atari.[ch], atari_sdl.c, cfg.c, configure.ac, mzpokeysnd.[ch],
pbi_xld.c, platform.h, ui.c USAGE : added synchronized sound for the SDL
version.
Sound can now be generated in sync with the rest of the emulation and not in a
separate thread.  VOL_ONLY_SOUND is no longer needed.  GTIA and POKEY
digisounds now work properly.  The old pokeysnd.c will not work with
synchronized sound, only mzpokeysnd will be supported. 16 bit sound is now
the default for SDL.  Use -audio8 for 8 bit SDL sound.
Improved mzpokeysnd speed somewhat.


2009-08-12  Piotr Fusik  <fox@scene.pl>
  Commiting a modified patch from Magnus Lind <magli143@gmail.com>
* input.c: fix for trak-ball (cx22) emulation: bits 0 and 3 keep
  the last direction


2009-07-18  Petr Stehlik <pstehlik@sophics.cz>
* configure.ac: patch from Patrice Mandin for gemlib autodetection


2009-06-30  Piotr Fusik  <fox@scene.pl>
  Commiting patch submitted by Tomasz Krasuski <tomasz.krasuski@interia.pl>
* atari_sdl.c, compfile.c: changed "#ifdef linux" to "#ifdef __linux__"


2009-04-18  Perry McFarlane  <perry_m@fastmail.fm>
* sio.c: sio fix broke BINLOAD


2009-04-17  Perry McFarlane  <perry_m@fastmail.fm>
* sio.c: fix sio for AMS music player


2009-03-30  Perry McFarlane  <perry_m@fastmail.fm>
* gtia.c: compile without NEW_CYCLE_EXACT


2009-03-30  Petr Stehlik <pstehlik@sophics.cz>
* atari800.spec: png library added to dependencies.


2009-03-27  Piotr Fusik  <fox@scene.pl>
* win32/atari_win32.c: missing return value in PLATFORM_Initialise
* win32/.cvsignore: atari.res


** 2.1.0 released on 2009-03-27

2009-03-27  Petr Stehlik <pstehlik@sophics.cz>
* atari800.spec: added dependencies to SDL, ncurses, zlib and readline
* debian/control: added dependency to libreadline5-dev
* debian/changelog, debian/atari800.cfg: updated for release
* emuos.{h,lis}: (c) 2005 -> 2009
* DOC/FAQ: updated for release (SDL keyboard joysticks are configurable now)